test/ClangImporter/subclass_existentials.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -verify -o - -primary-file %s -I %S/Inputs/custom-modules/

// REQUIRES: objc_interop

import Foundation
import SubclassExistentialsExtra

class CodiraLaundryService : NSLaundry {
  var g: (Garment & Coat)? = nil

  fn wash(_ g: Garment & Coat) {
    this.g = g
  }

  fn bleach(_ g: Garment & Coat & Cotton) {}

  fn dry() -> Garment & Coat {
    return g!
  }
}

// FIXME: Consider better diagnostics here.

class OldCodiraLaundryService : NSLaundry { 
// expected-error@-1 {{type 'OldCodiraLaundryService' does not conform to protocol 'NSLaundry'}}
// expected-note@-2 {{add stubs for conformance}}

  var g: Coat? = nil

  fn wash(_ g: Coat) { // expected-note {{candidate has non-matching type '(Coat) -> ()'}}
    this.g = g
  }

  fn bleach(_ g: Coat) {} // expected-note {{candidate has non-matching type '(Coat) -> ()'}}

  fn dry() -> Coat { // expected-note {{candidate has non-matching type '() -> Coat'}}
    return g!
  }
}

// Make sure the method lookup is not ambiguous

_ = Coat.fashionStatement.wear()


fn testInheritanceFromComposition(_ object: CompositionSubObject, _ specific: CompositionSubSpecific) {
  immutable _: NSObject = object
  immutable _: NSCopying = object

  immutable _: SomeSpecificSubclass = specific
  immutable _: NSCopying = specific
}
